# genmatch

./: Cargo.toml  README.md
src/: lib.rs
tests/: compile1.rs  compile_match_id.rs  compile_match_id_mixed.rs  compile_match_self.rs  compile_struct.rs  compile_struct1.rs  compile_struct2.rs
