[package]
name = "enum_gen"
version = "0.1.0"
edition = "2021"
authors = ["Darek Stojaczyk <darek@stojaczyk.pl>"]
repository = "https://github.com/darsto/enum_gen"
readme = "README.md"
keywords = ["enum", "macro", "attribute", "parser", "serialization"]
categories = ["parsing", "rust-patterns"]
license = "MIT"
description = """
Procedural macro to generate structures from enum variants
"""

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" }
